Add links to navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,12 +5,14 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Pineapple Cat Jazz</a>
+    <!-- <a class="navbar-brand" href="/">Pineapple Cat Jazz</a> -->
+    <%= link_to "Pineapple Cat Jazz", root_path, class: 'navbar-brand' %>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Link1", "/path1"  %></li>
-        <li><%= link_to "Link2", "/path2"  %></li>
-        <li><%= link_to "Link3", "/path3"  %></li>
+        <li><%= link_to "Courses", courses_path  %></li>
+        <li><%= link_to "About", about_path  %></li>
+        <li><%= link_to "Pricing", pricing_path  %></li>
+        <li><%= link_to "FAQ", faq_path  %></li>
       </ul>
     </div>
   </div>
