--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
+          <pre>
+            params: <%= params.inspect %>
+          </pre>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
